apps/amp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amp
  namespace: amp
spec:
  selector:
    app: amp
  ports:
    - name: http
      port: 80
      targetPort: http
