apps/amp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amp
  namespace: amp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - amp.tamlabs.co.uk
      secretName: amp-tls
  rules:
    - host: amp.tamlabs.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amp
                port:
                  number: 80
